# lang-chain-test

./: README.md  compose.yml  test.py
.devcontainer/: devcontainer.json
backend/: pyproject.toml
backend/.docker/app/: Dockerfile
backend/app/: main.py
client/: joke.py
