[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.33.0"
langchain = "^0.3.12"
langchain-community = "^0.3.12"
langchain-core = "^0.3.25"
openai = "^1.57.4"
anthropic = "^0.40.0"
langchain-openai = "^0.2.12"
langchain-anthropic = "^0.3.0"
tavily-python = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
